--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ header {
 }
 
 section {
-  padding: 0 10%;
+  padding: 0 20%;
 }
 
 .hero-text h5 {
@@ -148,4 +148,42 @@ section {
   font-size: 24px;
   color: white;
   transition: all 0.5s ease;
+}
+.icons i:hover {
+  color: #4d9559;
+  transform: translateY(-7px);
+}
+.scroll-down {
+  position: absolute;
+  bottom: 6%;
+  right: 9%;
+}
+
+.scroll-down i {
+  display: block;
+  padding: 10px;
+  font-size: 35px;
+  color: white;
+  background: #4d9559;
+  border-radius: 25px;
+  transition: all 0.5s ease;
+}
+
+.scroll-down i:hover {
+  transform: translateY(-5px);
+}
+
+@media (max-width: 1535px) {
+  header {
+    padding: 15px 3%;
+    transition: 0.2s;
+  }
+  .icons {
+    padding: 0 3%;
+    transition: 0.2s;
+  }
+  .scroll-down {
+    right: 3%;
+    transition: 0.2s;
+  }
 }
